- ADD: Implement Issue 87. TortoiseMerge shows now
       the filename and the revision in the viewtitle.
       TME gets this information from TSVN. (Stefan)
- ADD: The repository browser now allows the selection
       of more than one item. With this, the user can
       now select two files/folders from different
       urls (e.g. trunk and tags) and request a diff
       from them. (Stefan)
- CHG: The log message editboxes now do "soft-wrap",
       i.e. the logmessage is wrapped at the right
       end of the dialog box. (Stefan)
- BUG: Some patchfiles were not parsed correctly. (Stefan)
- BUG: Fixed a massive memory leak when showing logs,
       also reduced memory consumption when 
       committing. (Stefan)
- BUG: If the config file was messed up with TSVN just
       crashed instead of showing the error and exit. (Stefan)
- BUG: When sorting by a column in the commit dialog
       the selections (checkboxes) got lost. (Stefan)
- BUG: When the recursive overlay was activated, the
       overlays for folders weren't shown recursive if
       the explorer columns weren't sorted by name. (Stefan)

Version 0.26
- ADD: The columns in the progress and the commit dialog 
       are now sortable. (Stefan)
- ADD: It's possible now to drag on the locatorbar
       in TME. (Stefan)
- ADD: TME now shows ToolTips for the filenames in
       each view to make it easier to see the
       full path. (Stefan)
- ADD: New context menu to open files with the
       default application in the commit dialog. (Stefan)
- ADD: By placing a '#' in front of the paths for the
       external diff/merge programs make TSVN use
       it's own program TortoiseMerge. This helps
       users who want to switch easily between
       two different programs. (Stefan)
- ADD: german translation of the TSVN docs. (Stefan)
- ADD: the helpfile is chosen according to the
       selected language. (Stefan)
- ADD: Configurable font and fontsize in TME. (Stefan)