@@ -12,6 +12,8 @@
        now select two files/folders from different
        urls (e.g. trunk and tags) and request a diff
        from them. (Stefan)
+- ADD: Implement a "Delete" command in the context menu of 
+       the commit dialog for unversioned files. (Stefan)
 - CHG: The log message editboxes now do "soft-wrap",
        i.e. the logmessage is wrapped at the right
        end of the dialog box. (Stefan)
